--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
   equatable: ^2.0.3
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
